--- a/업무/logseq/bak/pages/KU___ISELED_SampleSource/2023-12-23T14_21_54.061Z.Desktop.md
+++ b/업무/logseq/bak/pages/KU___ISELED_SampleSource/2023-12-23T14_21_54.061Z.Desktop.md
@@ -1,4 +1,5 @@
 - 코드분석
+  collapsed:: true
 	- ILaS_Init_Interface(IseledContainer_0_VS_0.nrOfILaSNetworks, &IseledContainer_0_VS_0)
 		- NrOfILaSNetworks
 		- ILas_ConfigType *ConfigPtr
@@ -32,12 +33,15 @@
 	- IseledCb
 		- event callback
 - PORT
+  collapsed:: true
 	- 114 PTB14 lpspi1_clk  , input
 	- 112 PTB16 lpspi1_sout , input/output
 	-
 - 궁금한 점
+  collapsed:: true
 	- NetworkNr / NrOfLA / Address / Strip / PWM channel
 - 예제 설명
+  collapsed:: true
 	- 1. Example Description
 	      This application demonstrate the usage of Iseled driver in Real Time Drivers.
 	      It is applied to INT220Q - ILAS ADK. However, it can also be adapted for an ISELED strip by updating the NUM_IC from 6U to 17U.
