--- a/업무/pages/공부___보안.md
+++ b/업무/pages/공부___보안.md
@@ -1,12 +1,13 @@
 - 용어
-	- Secure Acess
+  collapsed:: true
+	- ## Secure Acess
 		- [자율주행 자동차 사이버보안 기능Secure Access](https://blog.naver.com/PostView.naver?blogId=fescaro&logNo=222070543450)
 		- 공개키 기반 구조를 통해 차량 ECU에 접근하는 사용자를 식별
 		- ECU생산라인에서 루트 인증서를 HSM내의 안전한 저장소에 저장
 		  ECU는 인증서버의 인증 요청을 검증하고, 난수를 인증서버로 전송해 전자서명을 요청할 수 있다
 		  인증서버는 캐인키로 난수의 전자서명을 생헝하고 난수의 전자서명을 추가해 ECU에 검증 요청
 		  ECU는 난수의 전사서명을 검증하여 전자서명을 통해 허가된 사용자만 접근할 수 있도록 인가
-	- Secure Flash
+	- ## Secure Flash
 		- [자율주행 자동차 사이버보안 기능 Secure Flash](https://blog.naver.com/PostView.naver?blogId=fescaro&logNo=222072224606)
 		- 전자서명 검증을 기반으로 인가된 제소사의 유효한 소프트웨어인지 확인한다
 		- 제어기 제조사가 직접 관리하는 경우
@@ -22,9 +23,9 @@
 			  logseq.order-list-type:: number
 			- 검증결과에 문제가 없으면 소프트웨어 업데이트가 성공적으로 진행된다
 			  logseq.order-list-type:: number
-	- Secure Boot
+	- ## Secure Boot
 		- [자율주행 자동차 사이버보안 기능 Secure Boot](https://blog.naver.com/PostView.naver?blogId=fescaro&logNo=222075852460&parentCategoryNo=&categoryNo=&viewDate=&isShowPopularPosts=false&from=postView)\
-	- 암호화 알고리즘
+	- ## 암호화 알고리즘
 		- 대칭키 암호화
 			- 하나의 키로 암호화 / 복호화
 			- 대칭키 = 비밀키
@@ -39,3 +40,21 @@
 			- 원본 데이터의 해시값을 개인키로 암호화하여 원본 데이터와 함께 동봉
 			- 원본 데이터에 서명하는 과정 : Signing
 			- 서명된 데이터 검증 과정 : Verification
+- ### 암호학
+	- 용어
+		- cipher text / plain text
+	- 중요 특성
+		- 기밀성 Confidentiality
+		- 무결성 Integrity
+		- 인증     Authentication
+	- 방향성
+		- 단방향 암호화 방식
+		- 양방향 암호화 방식
+		-
+- ### SecureFlash2.0
+	- SAG_OTA.pdf
+	- Meta Data 수신하여 복호화 KEY 추출
+	- Download 과정에서 해당키로 암호화된 펌웨어 데이터 복호화
+	- Rouine Control (checkProgrammingDependencies 0xFF01) 에서 전자서명 확인
+	-
+-
