--- a/업무/pages/업무___일지___5월.md
+++ b/업무/pages/업무___일지___5월.md
@@ -23,13 +23,13 @@ collapsed:: true
 		- 팀 회식 예정 (에슐리)
 		- to do list 정리
 			- EcuReset Hang issue
-			- Communication control issue
+			- Communication control issue -> OK (0522)
 			- 22h sensor implementation
 			- CanTrcv Sleep Mode
 			- 아키텍처 재설계
 			- ISELED 1.0 전환
 			- ISELED 통신 에러 from 모비스
-			-
+			- NVM 메모리 변화 로직 확인
 		-
 - ### 5월 평가
 -
